Simplified webservers/kill endpoint: removed ability to restart webserver, reuest body is now  only an array of port(s) + changed openAPI YAML spec accordingly
